Added and styled footer section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,4 @@
 @import "sections/_form.scss";
 @import "sections/_google-map.scss";
 @import "sections/_results.scss";
+@import "sections/_footer.scss";
