--- a/src/scss/sections/_results.scss
+++ b/src/scss/sections/_results.scss
@@ -33,7 +33,7 @@
 			margin: 25px 2.5% 0;
 			height: 200px;
 			padding: 1em;
-			overflow: scroll;
+			overflow: auto;
 			overflow-x: hidden;
 		}
 
