Added labels to meetup description to match map

--- a/src/scss/sections/_results.scss
+++ b/src/scss/sections/_results.scss
@@ -1,8 +1,10 @@
 .meetup-results{
+	position: relative;
 	padding: 0 1em;
 	margin-bottom: 12em;
 
 	.meetup-template{
+		position: relative;
 		width: 100%;
 		padding: 1em 0;
 		color: #fff;
@@ -23,6 +25,18 @@
 		.title{
 			width: 50%;
 			float: left;
+		}
+
+		.label{
+			position: relative;
+			display: inline;
+			vertical-align: center;
+			float: right;
+			margin-right: 25%;
+			width: 25px;
+			height: 25px;
+			border-radius: 50%;
+			border: 1px solid #000;
 		}
 
 		.organizer{
